# Capstone_2

./: .gitignore
.claude/: settings.json
cctv_crowd_dashboard/: pyproject.toml
cctv_crowd_dashboard(2)/cctv_crowd_dashboard(2)/analyzer/: main_analyzer.py
cctv_crowd_dashboard(2)/cctv_crowd_dashboard(2)/analyzer/configs/: E05_008_roi.json
cctv_crowd_dashboard/analyzer/: analyzer.py  main_analyzer.py  setup_roi.py
cctv_crowd_dashboard/analyzer/configs/: E05_008_roi.json  alert_config.json  bytetrack_custom.yaml  sibuya_roi.json  test_roi.json
cctv_crowd_dashboard/analyzer/modules/: backend_client.py  bytetrack_tracker.py  db_logger.py  optical_flow.py  p2pnet_counter.py  roi_manager.py
cctv_crowd_dashboard/analyzer/outputs/: analysis.db  analysis.db-shm  analysis.db-wal
cctv_crowd_dashboard/cctv_crowd_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cctv_crowd_dashboard/docs/: RISK_DESIGN.md
cctv_crowd_dashboard/p2pnet/models/: vgg_.py
cctv_crowd_dashboard/p2pnet/util/: misc.py
cctv_crowd_dashboard/server/: main.py  run.ps1
cctv_crowd_dashboard/server/services/: db_logger.py  risk_engine.py
cctv_crowd_dashboard/server/static/: index.html
cctv_crowd_dashboard/tests/: test_risk_engine.py
